<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dip"
        android:text="@string/type_of_sport"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dip"
        android:text="@string/distance"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/SportDistanceText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/distance_in_meter"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dip"
        android:text="@string/calory_burnt"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/SportCaloryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/calory_burnt_in_field"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dip"
        android:text="@string/pick_date"
        android:textSize="20sp" />

    <DatePicker
        android:id="@+id/date_picker_actions"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>